[tool.poetry]
name = "ctkxyframe"
version = "0.1.0"
description = ""
authors = ["Akascape", "P3rdigas <pr.perdigao@campus.fct.unl.pt>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
customtkinter = "^5.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
